[package]
name = "acme4console"
version = "0.0.1"
authors = ["alex4386 <alex4386@stella-it.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muroba = { git = "https://github.com/kiwiyou/muroba", branch = "main" }
crossterm = { version = "0.17", features = ["event-stream"] }
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
surf = "2.2.0"
